Issue #5 overlaping title text

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -4,36 +4,27 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 10vw);
+  min-height: fit-content;
 
   +#grid {
-    margin-top: rem(-400px);
+    margin-top: calc(-20vh + -5vw); 
 
-    @include media("<=md") {
-      margin-top: rem(-320px);
+    @media (max-height: rem(600px)) { 
+      position: relative; 
+      margin-top: 0; 
+      padding-top: rem(80px); 
+    }
+
+    @media (max-height: rem(300px)) { 
+      position: relative; 
+      margin-top: 10%; 
+      padding-top: rem(80px); 
     }
     
-    @include media("<=sm") {
-      margin-top: rem(-220px);
+    @include media("<=md") {
+      margin-top: calc(-15vh + -5vw); 
     }
-  }
-
-  .gradient,
-  .pixels {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .pixels {
-    opacity: 0.8;
-    background-image: url(../../assets/img/pixels.png);
-  }
-
-  .gradient {
-    background-image: linear-gradient(0deg, rgba(20, 20, 20, 1) 5%, rgba(0, 0, 0, 0) 30%);
   }
 
   .content {
@@ -46,17 +37,33 @@
     min-height: fit-content;
     padding-left: 10%;
 
+    @media (max-height: rem(600px)) { 
+      padding-top: 8%;
+      padding-bottom: 10%;
+      min-height: fit-content;
+      height: 100%;
+    }
+
+    @media (max-height: rem(200px)) { 
+      padding-top: 10%;
+      padding-bottom: 30%;
+      min-height: fit-content;
+      height: 100%;
+    }
+    
     @include media("<=sm") {
-      width: 80%;
+      width: 95%; 
+      height: 100%;
       padding-bottom: 20%;
-      padding-top: 30%;
+      padding-top: 10%;
       min-height: fit-content;
     }
 
     @include media("<=md") {
-      width: 80%;
+      width: 90%; 
       padding-bottom: 20%;
-      padding-top: 10%;
+      padding-top: 5%; 
+      height: 100%;
       min-height: fit-content;
     }
 
@@ -72,7 +79,7 @@
       margin: rem(10px) 0;
 
       @include media("<=sm") {
-        font-size: rem(20px);
+        font-size: rem(30px);
       }
     }
 
@@ -83,11 +90,11 @@
       margin: 0;
 
       @include media("<=md") {
-        font-size: rem(18px);
+        font-size: rem(20px);
       }
 
       @include media("<=sm") {
-        font-size: rem(16px);
+        font-size: rem(18px);
       }
     }
 
